# ror

./: .gitignore  Cargo.toml  README.md  dev.md  lib.rs
.github/workflows/: ci.yml
examples/: basic.rs
ror-sys/: Cargo.toml  README.md  build.rs  lib.rs
scripts/: gen_mnist_outputs.py
src/: lib.rs
tests/: mnist.rs  session_with_options.rs
