[package]
name = "ror-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "onnixruntime"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "ror_sys"
path = "lib.rs"


[dependencies]


[build-dependencies]
bindgen = "0.63.0"
